[PIMDEV-603] Fix an issue where footer was out of place

--- a/scss/login.scss
+++ b/scss/login.scss
@@ -48,10 +48,6 @@
         padding: 10px;
     }
 
-    #page-wrapper {
-        padding-top: 65px;
-    }
-
     .outercont {
         display: flex;
         flex-direction: column;
